--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,16 @@ nav {
 .register-form {
   width: 100%;
   height: 100vh;
+  background-position: center;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
+.login-form {
+  width: 100%;
+  height: 100vh;
   background-position: center;
   background-size: cover;
   display: flex;
