--- a/src/Bitters.css
+++ b/src/Bitters.css
@@ -62,6 +62,7 @@
 
 .button-style {
   position: absolute;
+
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -84,7 +85,7 @@
   color: #fff;
 }
 
-.btn::before {
+button::before {
   content: "";
   position: absolute;
   left: 0;
@@ -99,10 +100,60 @@
   border-radius: 5px;
 }
 
-.btn1::before {
+button::before {
   transform: scaleX(0);
 }
 
-.btn1:hover::before {
+button:hover::before {
   transform: scaleX(1);
+}
+
+.bottom-center {
+  position: relative;
+  text-align: center;
+  top: 90px;
+}
+
+.bottom-center button {
+  background: none;
+  border: 2px solid #000;
+  font-family: "montserrat", sans-serif;
+  text-transform: uppercase;
+  padding: 12px 20px;
+  min-width: 200px;
+  margin: 10px;
+  cursor: pointer;
+  transition: color 0.4s linear;
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.bottom-center button:hover {
+  color: #fff;
+}
+
+.bottom-center button::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: crimson;
+  z-index: -1;
+  transition: transform 0.5s;
+  transform-origin: 0 0;
+  transition-timing-function: cubic-bezier(0.5, 1, 6, 0.4, 0.7);
+}
+
+.bottom-center button::before {
+  transform: scaleX(0);
+  border-radius: 5px;
+}
+
+.bottom-center button:hover::before {
+  transform: scaleX(1);
+  border-radius: 5px;
 }
