--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,10 @@ h1 {
   font-family: alba;
 }
 
+h2 {
+  font-size: 40px;
+}
+
 .home {
   width: 100%;
   height: 100vh;
@@ -120,6 +124,30 @@ button {
   border-radius: 5px;
   cursor: pointer;
   width: 100px;
+}
+
+.account-overlay {
+  position: relative;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 1;
+}
+
+.account-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  z-index: 2;
+  color: white;
 }
 
 @media (max-width: 768px) {
