--- a/src/index.css
+++ b/src/index.css
@@ -39,9 +39,18 @@ h2 {
   text-align: center;
 }
 
+.total-container h3 {
+  font-size: 24px;
+}
+
 .home {
   width: 100%;
   height: 100vh;
+}
+
+.total-container {
+  text-align: center;
+  margin-top: 40px;
 }
 
 video {
