--- a/src/index.css
+++ b/src/index.css
@@ -26,8 +26,6 @@ h2 {
   font-size: 40px;
 }
 
-/* Cart.css */
-
 .cart-container {
   text-align: center;
   margin-top: 20%;
@@ -58,6 +56,10 @@ h2 {
 .home {
   width: 100%;
   height: 100vh;
+}
+
+.billing-info-form-container {
+  align-items: center;
 }
 
 .total-container {
